@@ -11,6 +11,7 @@ Date: 2025-04-18
   Bugfixes:
     - Fix that frozen items can be used as nutrients for biochamber and greenhouse
     - Fixed recipes that have more than 2 fluid inputs or outputs for the big crusher (eg palladium recipe)
+    - Fixed recipe chain for optical sensor
 ---------------------------------------------------------------------------------------------------
 Version: 0.3.10
 Date: 2025-04-11
